--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 <img src="assets/img2.jpg"
                  alt="slider-img">
                  <div class="content">
-                    <p>Tujuan Masuk UTY</p>
-                    <h2>Biar Jago</h2>
+                    <p>Di UTY Dapet Apa Aja?</p>
+                    <h2>Ilmu</h2>
                     <p>Saya dapat membuat sebuah program menggunakan bahsa seperti HTML,CSS, Phyton dan JavaScript berkat berkuliah di UTY tercinta
                     </p>
                  </div>
@@ -62,7 +62,7 @@
                  alt="slider-img">
                  <div class="content">
                     <p>Hobi</p>
-                    <h2>ML-an</h2>
+                    <h2>ML</h2>
                     <p>Saya biasa main ML, user Yi Shun Shin. Retribution anti indomaret.
                     </p>
                  </div>
