--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                 <img src="assets/img3.jpg"
                  alt="slider-img">
                  <div class="content">
-                    <p>Skill</p>
-                    <h2>Gitaran</h2>
+                    <p>Skill Nya Apaan?</p>
+                    <h2>Gitar</h2>
                     <p>Saya dapat bermain gitar, walaupun ga punya gitar hehe, tapi saya bisa bermain beberapa lagu
                         dan hafal beberapa kunci dasar.
                     </p>
@@ -61,9 +61,10 @@
                 <img src="assets/img4.jpg"
                  alt="slider-img">
                  <div class="content">
-                    <p>Hobi</p>
+                    <p>Hobi Nya Apa?</p>
                     <h2>ML</h2>
                     <p>Saya biasa main ML, user Yi Shun Shin. Retribution anti indomaret.
+                      Capek gendong temenku yang namanya Yudha kelas B
                     </p>
                  </div>
                 </div>
