--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                  <div class="content">
                     <p>Hobi Nya Apa?</p>
                     <h2>ML</h2>
-                    <p>Saya biasa main ML, user Yi Shun Shin. Retribution anti indomaret.
+                    <p>Saya biasa main ML, user Yi Sun Shin. Retribution anti indomaret.
                       Capek gendong temenku yang namanya Yudha kelas B
                     </p>
                  </div>
