--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <img src="assets/img1.jpg"
                  alt="slider-img">
                  <div class="content">
-                    <p>My Self</p>
+                    <p>Myself</p>
                     <h2>Who?</h2>
                     <p>Hi there, perkenalkan Nama saya Damar Mahija Kinnara saya lahir di Pemalang pada 4 Maret 2006.
                         Saya pernah bersekolah di SDN 2 Kebondalem, SMPN 2 Pemalang, dan SMAN 1 Pemalang. 
@@ -82,7 +82,7 @@
     <div class="thumbnail">
         <div class="slide active">
             <img src="assets/img1.jpg" alt="thumbnail">
-            <div class="content">My Self</div>
+            <div class="content">Myself</div>
         </div>
         <div class="slide">
             <img src="assets/img2.jpg" alt="thumbnail">
